# thunder-acoustics-in-the-wild

./: .env.sample  .gitignore  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/: urls.txt
docs/: CONFIG_REFERENCE.md
notebooks/: 00_quickstart.ipynb  10_event_detection_eval.ipynb  20_features_scouting.ipynb
scripts/: build_report.py  compute_features.py  detect_events.py  extract_audio.py  fetch_videos.py  migrate_config.py  validate_config.py  visualize.py
scripts/unix/: batch_extract.py  check_deps.sh
scripts/win/: batch_extract.py  check_deps.ps1  set_permissions.ps1  test_setup.ps1
thunder/: __init__.py  detection.py  distance.py  features.py  io.py  metadata.py  preprocess.py  utils.py
